--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -1,3 +1,6 @@
+* {
+  font-size: 1.5em;
+}
 h1 {
   color: gold;
   font-family: myFirstFont;
@@ -6,6 +9,6 @@ h1 {
   background-color: rgba(52, 53, 53, 0.425);
 }
 img {
-  height: 250px;
+  height: 325px;
   margin-bottom: 50px;
 }
