--- a/client/public/Style.css
+++ b/client/public/Style.css
@@ -18,3 +18,29 @@ body {
   background-image: url(./Media-Files/32966.jpg);
   font-family: "secondFont";
 }
+.navButton {
+  font-family: "secondFont";
+  font-size: x-large;
+}
+
+/* Mobile Responsive Start */
+@media (max-width: 375px) {
+  .navButton {
+    width: 100%;
+    color: white;
+    padding: 20px;
+    font-family: "secondFont";
+    font-size: large;
+    font-weight: bolder;
+  }
+}
+@media (max-width: 768px) {
+  .navButton {
+    width: 100%;
+    color: white;
+    padding: 10px;
+    font-family: "secondFont";
+    font-size: large;
+    font-weight: bolder;
+  }
+}
