--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
+
+a {
+  color: gold;
+}
+
+a:hover {
+  color: white;
+}
